# actix-weather

./: Cargo.toml  api_spec.yaml  supported_city.json
src/: load_const.rs  main.rs
src/domain/: json_model.rs  mod.rs
src/handler/: health.rs  hello.rs  index.rs  mod.rs  ping.rs  weather.rs
src/util/: int_rng.rs  mod.rs
